增加: 根据ID获取菜单详情
